--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "devDependencies": {
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
+    "markdown-magic": "^0.1.25",
     "prettier": "^1.16.1"
   },
   "scripts": {
+    "markdown": "md-magic --path \"labs/**/README.md\"",
     "validate": "node validate.js"
   },
   "workspaces": [
