--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prettier": "^1.16.1"
   },
   "scripts": {
-    "markdown": "md-magic --path \"labs/**/README.md\"",
+    "markdown": "md-magic --path \"labs/**/README.md\" --path README.md",
     "validate": "node validate.js"
   },
   "workspaces": [
