--- a/labs/03-using-gatsby-image/package.json
+++ b/labs/03-using-gatsby-image/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-drupal-blog-lab-getting-started",
+  "name": "gatsby-drupal-blog-lab-using-gatsby-image",
   "private": true,
-  "description": "The getting-started lab of the gatsby-drupal-blog",
+  "description": "The using-gatsby-image lab of the gatsby-drupal-blog",
   "version": "0.1.0",
   "author": "Dustin Schau <dustin@gatsbyjs.com>",
   "dependencies": {
